Added Foo, Sampler and tests. Added junit dependency.

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
       <artifactId>mahout-core</artifactId>
       <version>0.6-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.7</version>
+    </dependency>
   </dependencies>
     
 </project>
