--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
                     <!--<artifactId>hadoop-core</artifactId>-->
                 <!--</exclusion>-->
             <!--</exclusions>-->
-            <version>0.6</version>
+            <version>0.8-SNAPSHOT</version>
         </dependency>
 
         <dependency>
