--- a/pom.xml
+++ b/pom.xml
@@ -34,16 +34,16 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.mrunit</groupId>
-            <artifactId>mrunit</artifactId>
-            <version>0.9.0-incubating</version>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.1</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.7</version>
+            <version>4.8</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
