--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>13.0.1</version>
+            <version>30.1.1-jre</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.apache.hadoop</groupId>
